// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeftDrawerMenu.tsx render left drawer menu when mock value is invalid menutype should return empty div when the menutype is not valid(doesnt exist in the menu setting) 1`] = `<div />`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is about should render left drawer menu for about option in header that matches the snapshot 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked LeftDrawerMenu-drawer-6 LeftDrawerMenu-drawerClose-8"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper LeftDrawerMenu-paper-11 LeftDrawerMenu-drawerClose-8 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <a
          href="/aboutservice"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Om tjenesten
            </div>
          </li>
        </a>
        <a
          href="/rolesandrights"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-others"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Roller og rettigheter
            </div>
          </li>
        </a>
        <a
          href="/production"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-settings"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Produksjon
            </div>
          </li>
        </a>
        <a
          href="/versionhistory"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-deadline"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Versjonshistorikk
            </div>
          </li>
        </a>
        <a
          href="/aboutenduser"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Om sluttbrukeren
            </div>
          </li>
        </a>
        <a
          href="/altinn"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Altinn.no
            </div>
          </li>
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is create should render left drawer menu for create option in header that matches the snapshot 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked LeftDrawerMenu-drawer-6 LeftDrawerMenu-drawerClose-8"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper LeftDrawerMenu-paper-11 LeftDrawerMenu-drawerClose-8 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <a
          href="/datamodel"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Datamodell
            </div>
          </li>
        </a>
        <a
          href="/uieditor"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-settings"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              GUI
            </div>
          </li>
        </a>
        <a
          href="/api"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              API
            </div>
          </li>
        </a>
        <a
          href="/code"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Kode
            </div>
          </li>
        </a>
        <a
          href="/accesscontrol"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Tilgangsstyring
            </div>
          </li>
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is empty string should return an empty div when the menutype is empty string that matches the snapshot 1`] = `<div />`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is language should render left drawer menu for language option in header that matches the snapshot 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked LeftDrawerMenu-drawer-6 LeftDrawerMenu-drawerClose-8"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper LeftDrawerMenu-paper-11 LeftDrawerMenu-drawerClose-8 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <a
          href="/text"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-settings"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Tekst
            </div>
          </li>
        </a>
        <a
          href="/translate"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-settings"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Flere språk
            </div>
          </li>
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is null should return an empty div when the menutype is null that matches the snapshot 1`] = `<div />`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is publish should render left drawer menu for publish option in header that matches the snapshot 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked LeftDrawerMenu-drawer-6 LeftDrawerMenu-drawerClose-8"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper LeftDrawerMenu-paper-11 LeftDrawerMenu-drawerClose-8 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <a
          href="/publish"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-settings"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Produksjonsette
            </div>
          </li>
        </a>
        <a
          href="/status"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Status
            </div>
          </li>
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is test should render left drawer menu for test option in header that matches the snapshot 1`] = `
<div>
  <div
    className="MuiDrawer-root MuiDrawer-docked LeftDrawerMenu-drawer-6 LeftDrawerMenu-drawerClose-8"
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
  >
    <div
      className="MuiPaper-root MuiPaper-elevation0 MuiDrawer-paper LeftDrawerMenu-paper-11 LeftDrawerMenu-drawerClose-8 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft"
    >
      <hr
        className="MuiDivider-root"
      />
      <ul
        className="MuiList-root MuiList-padding"
      >
        <a
          href="/test"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-info-circle"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Test
            </div>
          </li>
        </a>
        <a
          href="/deploytotest"
          onClick={[Function]}
          style={
            Object {
              "borderBottom": 0,
            }
          }
        >
          <li
            className="MuiListItem-root LeftDrawerMenu-listItem-1 MuiListItem-gutters"
            disabled={false}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="MuiListItemIcon-root"
            >
              <i
                className="fa fa-integration-test"
                style={
                  Object {
                    "color": "rgba(0, 0, 0, 0.54)",
                    "fontSize": null,
                    "fontWeight": null,
                    "margin": null,
                    "padding": null,
                  }
                }
              />
            </div>
            <div
              className="MuiListItemText-root LeftDrawerMenu-listItemText-12"
            >
              Test i testmiljø
            </div>
          </li>
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`LeftDrawerMenu.tsx render left drawer menu when mockmenutype is undefined should return an empty div when the menutype is undefined) that matches the snapshot 1`] = `<div />`;
